@@ -1,3 +1,15 @@
+2012-12-17  Dirk Pranke  <dpranke@chromium.org>
+
+        build.webkit.org - add more google windows bots
+        https://bugs.webkit.org/show_bug.cgi?id=105225
+
+        Reviewed by Eric Seidel.
+
+        Adds two more windows bots (google-windows-3, a builder, and
+        google-windows-4, a tester) for the Chromium configs.
+
+        * BuildSlaveSupport/build.webkit.org-config/config.json:
+
 2012-12-17  Eric Seidel  <eric@webkit.org>
 
         Cleanup --profiler=perf code a little and allow up to 1000 report files (instead of 100)
